# NOVASPEAK

./: .gitignore  AGENTS.md
.github/workflows/: package-windows.yml
client/: .gitignore  package-lock.json  package.json  vite.config.js
client/src/: App.css  App.jsx  index.css  main.jsx  release-notes.js  release-notes.test.js
desktop/: README.md  app-config.json  auto-update.js  auto-update.test.js  main-window-policy.js  main-window-policy.test.js  main.js  netease-login-policy.js  netease-login-policy.test.js  netease-login.js  package-lock.json  package.json  preload.js
desktop-tauri/: README.md  package-lock.json  package.json
desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop-tauri/src-tauri/src/: main.rs
desktop/scripts/: build-renderer.js  publish-local-update.js  publish-local-update.test.js
scripts/: deploy-frontend.sh  nginx-frontend-cache.conf.example
server/: .env  .env.example  auth-roles.test.js  auth-session.js  auth-utils.js  authorization.js  authorization.test.js  avatar.js  avatar.test.js  channels.js  channels.test.js  db.js  desktop-updates.js  desktop-updates.test.js  guest-auth.js  index.js  online-member-management.js  online-member-management.test.js  package-lock.json  package.json  presence-has-users.test.js  presence-websocket.test.js  presence.js  presence.test.js  registration.js  registration.test.js  role-migrate.js  role-migrate.test.js  voice-management.js  voice-management.test.js  websocket-connection.js
server/chat/: attachments.js  attachments.test.js  messages.js  messages.test.js  migrate.js  (+3 more)
(+143 files in other folders)
